# etsi-watchdog

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PYPIREADME.md  README.md  SLACK_INTEGRATION.md  etsi-etna.html  etsi-failprint.html  etsi-watchdog.html  example_slack_integration.py  pyproject.toml
etsi/watchdog/: __init__.py  cli.py  compare.py  config.py  core.py  detectors.py  drift_check.py  hooks.py  logger.py  monitor.py  slack_notifier.py  utils.py
etsi/watchdog/drift/: base.py  factory.py  ks.py  psi.py  shap_drift.py
etsi_watchdog.egg-info/: PKG-INFO  SOURCES.txt
test/: test_recap.py  test_slack_notifier.py  test_v2.2.py  test_v2.py  test_watchdog.py
