[project]
name = "etsi-watchdog"
version = "0.1.1"
description = "Real-time model drift detection and hooks"
authors = [{ name = "ETSI", email = "you@example.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.7"
dependencies = [
    "pandas",
    "numpy"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
