[project]
name = "etsi-watchdog"
version = "0.2.0"
description = "Real-time drift detection for ML pipelines using PSI"
authors = [{name = "Etsi", email = "etsi.hq@gmail.com"}]
license = {text = "MIT"}
dependencies = ["pandas", "numpy"]
readme = "README.md"
requires-python = ">=3.8"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["etsi*"]
